Ensure top panel links aren't hidden by the scrollbar.

--- a/src/scss/elements/autonomous/containers/top-panel.scss
+++ b/src/scss/elements/autonomous/containers/top-panel.scss
@@ -11,7 +11,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
+  width: 100%;
   height: variables.$top-panel-height;
   padding: variables.$top-panel-padding;
   background: #121212;
